--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
 
   <!-- Rating state start -->
+  <main>
+    <section class="page first-page">
+      <h1>How did we do?</h1>
 
-  How did we do?
+      <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our
+        offering!</p>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+      <section><button class="rating">1</button> <button class="rating">2</button> <button class="rating">3</button>
+        <button class="rating">4</button>
+        <button class="rating">5</button>
+      </section>
 
-  1 2 3 4 5
+      <button>Submit</button>
+    </section>
+    <!-- Rating state end -->
 
-  Submit
+    <!-- Thank you state start -->
+    <section class="page second-page">
+      <h2>You selected <span id="final-rating"></span> out of 5</h2>
 
-  <!-- Rating state end -->
+      <h3>Thank you!</h3>
 
-  <!-- Thank you state start -->
+      <p>We appreciate you taking the time to give a rating. If you ever need more support,
+        don't hesitate to get in touch!</p>
+    </section>
+    <!-- Thank you state end -->
+  </main>
 
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
