--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <!-- Thank you state end -->
   </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
