--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Rating state start -->
   <main>
     <section class="page first-page">
+      <figure><img src="images/icon-star.svg" alt="star icon"></figure>
       <h1>How did we do?</h1>
 
       <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our
@@ -34,6 +35,9 @@
 
     <!-- Thank you state start -->
     <section class="page second-page">
+      <figure>
+        <img src="images/illustration-thank-you.svg" alt="thank you illustration">
+      </figure>
       <h2>You selected <span id="final-rating"></span> out of 5</h2>
 
       <h3>Thank you!</h3>
