Linked main.js to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <title>Frontend Mentor | Interactive rating component</title>
-
+  <script src="js/main.js" defer></script>
 </head>
 
 <body>
