--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our
         offering!</p>
 
-      <section><button class="rating">1</button> <button class="rating">2</button> <button class="rating">3</button>
+      <div><button class="rating">1</button> <button class="rating">2</button> <button class="rating">3</button>
         <button class="rating">4</button>
         <button class="rating">5</button>
-      </section>
+      </div>
 
       <button>Submit</button>
     </section>
